# EMA-API-Handling

./: .gitignore  LICENSE  README.md  example.ipynb  get_clients.py  get_data.py  get_interactions.py  get_schedule.py  merge_and_push_schedule.py  pyproject.toml  schedule_json_builder.py  set_interactions_from_json.py  set_schedule_from_json.py  upload_ready_20250723T150955.json
.ipynb_checkpoints/: example-checkpoint.ipynb
ema_api_handling/: __init__.py  generate_keys.py  get_clients.py  get_data.py  get_interactions.py  get_schedule.py  merge_and_push_schedule.py  set_interactions_from_json.py
